# operating-systems

./: .gitignore  CMakeLists.txt  README.md  allocation_malloc.c  chat.c  externals.h  fcfs.c  fork  fork.c  fork2.c  fork3.c  fork4.c  fork5.c  fork6  fork6.c  fork7  fork7.c  forkwait.c  init_variables_leak.c  ipc_queue_messasing_chat.c  ipc_queue_messasing_chat2.c  ipc_queue_messasing_consumer.c  ipc_queue_messasing_producer.c  ipc_shared_memory_client.c  ipc_shared_memory_server.c  leaks.c  local_server_socket.c  matrix-leak.c  mem.c  memory_managment.c  memory_prog02.c  memory_prog03.c  memory_prog04.c  memory_prog05.c  memory_prog1.c  p1.c  plot.c  plotter.c  posix_threads.c  priority-cpu.c  (+10 more)
babysteps/: boot.asm  print.inc
interlude_posix_local_sockets/: local_client_socket.c
lib/: DEST.txt  copia  cp.cpp  ls.c  lstat.c  matrix3x3  matrix3x3.cpp  my_rename.cpp  my_source.txt  renombre
posix_basic_tcp_ipv4_sockets/: Makefile  README.md  TCPEchoClient4.c  TCPEchoServer4.c  client.c  remote_client_socket.c  server.c
posix_chat_tcp_ipv4_sockets/: Makefile  chat.c  chat.cpp
tic_tac_toe_http_ipv4_sockets/: Makefile  README.md  console_tic_tac_toe.cpp  index.html  message_queue_tic_tac_toe.cpp  minimax_tic_tac_toe_generator.cpp  notification.h  package-lock.json  sockets.h  tcp_tic_tac_toe.cpp  tic_tac_toe.h  webserver_tic_tac_toe.cpp
tic_tac_toe_http_ipv4_sockets/sockets/: accepting_socket_state.h  active_socket.h  binding_socket_state.h  connection_socket_state.h  done_state.h  kind_socket_state.h  notification.h  passive_socket.h  socket.cpp  socket.h  (+3 more)
(+8 files in other folders)
